Minor Fixes